<resources>
    <string name="app_name">CourseListPlus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Course List Plus</string>
    <string name="nav_header_subtitle">email@wm.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_calendar">Calendar</string>
    <string name="menu_courses">Course List</string>
    <string name="menu_profile">My Profile</string>
    <string name="Search">Search</string>
    <string name="AddButton">Add To Calendar</string>
    <string name="RateButton">Rate Course</string>
    <string name="filterToApply">Filter To Apply</string>

    <string name="apr_23">Apr 2023</string>

    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUES</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THURS</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="One">1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weekly">Weekly</string>
    <string name="new_event">New Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="search_options">
        <item>CRN</item>
        <item>Course Attribute</item>
        <item>Credits</item>
        <item>Meet Days</item>
        <item>Meet Times</item>
        <item>Instructor</item>
    </string-array>

    <string name="title_activity_course_view">CourseViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="event">Event</string>
    <string name="Event" />
    <string name="courseListPlus">Course List Plus</string>
    <string name="topPicks">Top Picks</string>
    <string name="majorCourse">Major Courses</string>
    <string name="menu_home">Home Page</string>
    <string name="popularCourses">Popular Courses</string>

</resources>