<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/homepage"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_action_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_action_courselist"
            android:title="@string/menu_courses" />
    </group>
</menu>