<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#143452">

    <TextView
        android:id="@+id/courseListPlusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courseListPlus"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/topCourseScrollView"
        app:layout_constraintEnd_toEndOf='parent'
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/topCourseScrollView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#4D7FAE"
        app:layout_constraintBottom_toTopOf="@id/topPickTextView"
        app:layout_constraintEnd_toEndOf='parent'
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseListPlusTextView">


        <!--        <LinearLayout-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:orientation="vertical" />-->
    </HorizontalScrollView>

    <TextView
        android:id="@+id/topPickTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topPicks"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/topPickScrollView"
        app:layout_constraintEnd_toEndOf='parent'
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topCourseScrollView" />

    <HorizontalScrollView
        android:id="@+id/topPickScrollView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#4D7FAE"
        app:layout_constraintBottom_toTopOf="@id/majorCourseTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPickTextView">

        <!--        <LinearLayout-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:orientation="vertical" />-->
    </HorizontalScrollView>

    <TextView
        android:id="@+id/majorCourseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/majorCourse"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/majorCourseScrollView"
        app:layout_constraintEnd_toEndOf='parent'
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPickScrollView"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="512dp" />

    <HorizontalScrollView
        android:id="@+id/majorCourseScrollView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#4D7FAE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/majorCourseTextView">

        <!--        <LinearLayout-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:orientation="vertical" />-->
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>